# ctc-decoder

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  setup.py
bindings/python/ctcdecoder/: __init__.py  _common.cpp  _decoder.cpp  _decoderfree.cpp  common.py  decoder.py  decoderfree.py
bindings/python/examples/: decoder_example.py  decoder_example1.py  decoder_example2.py
src/: CMakeLists.txt
src/common/: Dictionary.cpp  Utils.cpp  Utils.h  WordUtils.cpp
src/decoder/: CMakeLists.txt  Decoder.h  LexiconDecoder.cpp  LexiconDecoder.h  LexiconFreeDecoder.cpp  LexiconFreeDecoder.h  Trie.cpp  Utils.h
src/lm/: CMakeLists.txt  KenLM.cpp  KenLM.h
test/: letters1.lst  words.lst
test/line/: corpus.txt  rnnOutput.csv
test/word/: corpus.txt  rnnOutput.csv
